[gd_scene load_steps=16 format=3 uid="uid://b87wi27ikd11u"]

[ext_resource type="Script" path="res://src/game/level.gd" id="2_k1c4c"]
[ext_resource type="PackedScene" uid="uid://dtdss75q8ijqm" path="res://model-scenes/road/road.tscn" id="3_y4su2"]
[ext_resource type="PackedScene" uid="uid://b5s7y47dt0i02" path="res://model-scenes/road/road-no_obstacle.tscn" id="4_4cdr3"]
[ext_resource type="AudioStream" uid="uid://wfqq8duweow3" path="res://sound-effects/streetAmbiance.mp3.mp3" id="4_5y3nd"]
[ext_resource type="PackedScene" uid="uid://bmpt3aib2l53i" path="res://model-scenes/player/player.tscn" id="5_fg01p"]
[ext_resource type="Script" path="res://src/game/pause_manager.gd" id="5_hk7c5"]
[ext_resource type="PackedScene" uid="uid://dcwc2wadg1kit" path="res://game-scene/deathScene.tscn" id="7_fi6s7"]
[ext_resource type="AudioStream" uid="uid://3to8bp1h34tc" path="res://sound-effects/pausesound.mp3" id="8_7rgy7"]
[ext_resource type="AudioStream" uid="uid://x0nww8r35l2p" path="res://sound-effects/resume sound.mp3" id="8_383qn"]
[ext_resource type="PackedScene" uid="uid://cliceuxg3ykps" path="res://game-scene/pauseMenu.tscn" id="8_epc66"]
[ext_resource type="Script" path="res://src/game/score_manager.gd" id="11_dva0v"]
[ext_resource type="PackedScene" uid="uid://03c33a2c0thb" path="res://game-scene/score.tscn" id="12_xv6kt"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_vlrfn"]
ground_color = Color(0.639537, 0.823187, 0.992865, 1)
energy_multiplier = 20.48

[sub_resource type="Sky" id="Sky_f5dp2"]
sky_material = SubResource("PhysicalSkyMaterial_vlrfn")

[sub_resource type="Environment" id="Environment_300yk"]
background_mode = 2
sky = SubResource("Sky_f5dp2")
volumetric_fog_enabled = true
volumetric_fog_density = 0.06

[node name="main2" type="Node3D"]

[node name="Level" type="Node3D" parent="."]
script = ExtResource("2_k1c4c")
modules = Array[PackedScene]([ExtResource("3_y4su2"), ExtResource("4_4cdr3")])

[node name="backgroundMusic" type="AudioStreamPlayer3D" parent="Level"]
unique_name_in_owner = true
stream = ExtResource("4_5y3nd")
volume_db = -4.948
parameters/looping = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.00953605, 0.352272, -0.935849, 0.000766221, 0.935894, 0.352281, 0.999954, 0.00264231, -0.00919465, -6.087, 4.82889, 0)
fov = 62.7341

[node name="player" parent="." instance=ExtResource("5_fg01p")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
jump_height = 2.0
jump_time_to_peak = 0.5
jump_time_to_descent = 0.2

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-2.72778e-08, 0.992941, -0.118612, 3.41556e-08, 0.118612, 0.992941, 1, 2.3034e-08, -3.715e-08, -5.27885, 3, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_300yk")

[node name="PauseManager" type="Node" parent="."]
script = ExtResource("5_hk7c5")

[node name="CanvasLayer" type="CanvasLayer" parent="PauseManager"]
process_mode = 3

[node name="pauseMenu" parent="PauseManager/CanvasLayer" instance=ExtResource("8_epc66")]
unique_name_in_owner = true
visible = false

[node name="pausesound" type="AudioStreamPlayer3D" parent="PauseManager/CanvasLayer/pauseMenu"]
stream = ExtResource("8_7rgy7")

[node name="deathScene" parent="PauseManager/CanvasLayer" instance=ExtResource("7_fi6s7")]
unique_name_in_owner = true
visible = false
metadata/_edit_use_anchors_ = true

[node name="resumebuttonsound" type="AudioStreamPlayer3D" parent="PauseManager"]
unique_name_in_owner = true
stream = ExtResource("8_383qn")

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource("11_dva0v")

[node name="CanvasLayer" type="CanvasLayer" parent="ScoreManager"]
layer = 0

[node name="ScoreText" parent="ScoreManager/CanvasLayer" instance=ExtResource("12_xv6kt")]
unique_name_in_owner = true

[connection signal="you_died" from="player" to="PauseManager" method="_on_player_you_died"]
